--- a/Ahorcado.ipynb
+++ b/Ahorcado.ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled5.ipynb",
+      "name": "Ahorcado.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNKdi3Nly1Ejp43EFps1Z/u",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPqRR2w1LG3FZcEpTVDL1cI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,8 +55,8 @@
         "         \"         / \\      |\", #piernas\n",
         "         \"__________________|\"] #piso\n",
         "\n",
-        "letras = []\n",
-        "error = 1\n",
+        "letras_selecc = []\n",
+        "errores = 1\n",
         "\n",
         "resultado = []\n",
         "\n",
@@ -66,7 +67,39 @@
         "\n",
         "  os.system(\"cls\")\n",
         "\n",
-        "  \n"
+        "  print (\"AHORCADO\")\n",
+        "\n",
+        "  for i in range(errores):\n",
+        "    print(ahorcado[i])\n",
+        "  for i in range(len(horca)-errores):\n",
+        "    print(horca[i-errores])\n",
+        "\n",
+        "    print()\n",
+        "\n",
+        "    print( \"    \", end= \"  \")\n",
+        "    for i in resultado:\n",
+        "      print(i, end=\" \")\n",
+        "\n",
+        "    print()\n",
+        "    print()\n",
+        "\n",
+        "    if resultado == palabra:\n",
+        "      print(\"Has ganado\")\n",
+        "      break\n",
+        "    \n",
+        "    if fallos > 5:\n",
+        "      print(\"No has adivinado, la palabra es \".join(palabra)\n",
+        "      print(\"Game Over\")\n",
+        "      break\n",
+        "\n",
+        "  while True:\n",
+        "    \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
